--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "oxygen-dz/oxygenframework",
-    "type": "library",
+    "type": "project",
     "description": "Create Framework",
     "keywords": ["package","package"],
     "homepage": "https://github.com/Oxygen-dz/oxygenframework",
@@ -13,7 +13,7 @@
         }
     ],
     "require": {
-        "guzzlehttp/guzzle": "7.4.5",
+        "guzzlehttp/guzzle": "7.0",
         "google/auth": "^1.16",
         "nesbot/carbon": "^2.51",
         "filp/whoops": "^2.14",
@@ -32,6 +32,7 @@
         "omnipay/mollie": "^5.4",
         "nelexa/zip": "^3.3",
         "markrogoyski/math-php": "^2.4",
+        "amitkkhanchandani/faceplusplus": "dev-master",
         "dompdf/dompdf": "^1.0",
         "twig/twig": "^3.3",
         "fakerphp/faker": "^1.15",
